--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ./node_modules/.bin/ts-node ./mail/mail.ts"
+    "start": "nodemon --exec ./node_modules/.bin/ts-node ./server/server.ts"
   },
   "keywords": [
     "REST",
@@ -14,7 +14,6 @@
   "author": "Robinson Luiz",
   "license": "ISC",
   "dependencies": {
-    "base-64": "^0.1.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
