--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ./node_modules/.bin/ts-node ./server/server.ts"
+    "start": "tsc && node ./build/server/server.js"
   },
   "keywords": [
     "REST",
